Update openapi and sdks
