# packages/admin/core/api/resources/coreAgentConfig/types/Model.js
@@ -5,6 +5,10 @@
 Object.defineProperty(exports, "__esModule", { value: true });
 exports.Model = void 0;
 exports.Model = {
+    AnthropicClaudeV1: "anthropic.claude-v1",
+    AnthropicClaudeV1100K: "anthropic.claude-v1-100k",
+    AnthropicClaudeInstantV1: "anthropic.claude-instant-v1",
+    AnthropicClaudeInstantV1100K: "anthropic.claude-instant-v1-100k",
     OpenaiGpt4: "openai.gpt-4",
     OpenaiGpt35Turbo: "openai.gpt-3.5-turbo",
 };
