# packages/admin/core/serialization/resources/coreAgentConfig/types/index.js
@@ -14,6 +14,10 @@ var __exportStar = (this && this.__exportStar) || function(m, exports) {
     for (var p in m) if (p !== "default" && !Object.prototype.hasOwnProperty.call(exports, p)) __createBinding(exports, m, p);
 };
 Object.defineProperty(exports, "__esModule", { value: true });
+__exportStar(require("./AnthropicConfig"), exports);
+__exportStar(require("./AnthropicConfigTemperature"), exports);
+__exportStar(require("./AnthropicConfigTopK"), exports);
+__exportStar(require("./AnthropicConfigTopP"), exports);
 __exportStar(require("./AgentConfigObjectType"), exports);
 __exportStar(require("./GreetingMessage"), exports);
 __exportStar(require("./InitialTurn"), exports);
